# mkdocs-material-prep

./: README.md  default_rules.yaml  mkdocs_material_prep.py  pyproject.toml  test_mkdocs_material_prep.py
test_data/: sample_clean.md  sample_with_pii.md
